--- a/client/src/layouts/AppLayout/AppLayout.module.css
+++ b/client/src/layouts/AppLayout/AppLayout.module.css
@@ -28,7 +28,7 @@
 
 .trialStripDays {
   font-weight: 700;
-  color: var(--success);
+  color: var(--cb-mint-shade);
 }
 
 .trialStripActions {
